--- a/Chicago.ipynb
+++ b/Chicago.ipynb
@@ -662,82 +662,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "from shapely.geometry import MultiPolygon, Point, Polygon\n",
+    "# import re\n",
+    "# from shapely.geometry import MultiPolygon, Point, Polygon\n",
     "\n",
-    "def create_polygons(df, geom_col, tract_col, block_col, full_block):\n",
-    "    pattern = re.compile(r'MULTIPOLYGON \\(\\(\\((.*)\\)\\)\\)')\n",
-    "    coords = df[geom_col].apply(lambda x: pattern.match(x)[1])\n",
-    "    points = coords.str.split()\n",
+    "# def create_polygons(df, geom_col, tract_col, block_col, full_block):\n",
+    "#     pattern = re.compile(r'MULTIPOLYGON \\(\\(\\((.*)\\)\\)\\)')\n",
+    "#     coords = df[geom_col].apply(lambda x: pattern.match(x)[1])\n",
+    "#     points = coords.str.split()\n",
     "    \n",
-    "    points = points.apply(lambda x: [y.replace(',', '')\n",
-    "                                      .replace('(', '')\n",
-    "                                      .replace(')', '') for y in x])\n",
-    "    polygons = []\n",
-    "    for i0 in range(0, len(points)):\n",
-    "        built_points = []\n",
-    "        for i1 in range(0, len(points[i0]) - 1, 2):\n",
-    "            built_points.append( \\\n",
-    "                (np.float(points[i0][i1+1]),  # The first value given is the longitude,\n",
-    "                 np.float(points[i0][i1])))   # the second is the latitude, so we index accordingly.\n",
+    "#     points = points.apply(lambda x: [y.replace(',', '')\n",
+    "#                                       .replace('(', '')\n",
+    "#                                       .replace(')', '') for y in x])\n",
+    "#     polygons = []\n",
+    "#     for i0 in range(0, len(points)):\n",
+    "#         built_points = []\n",
+    "#         for i1 in range(0, len(points[i0]) - 1, 2):\n",
+    "#             built_points.append( \\\n",
+    "#                 (np.float(points[i0][i1+1]),  # The first value given is the longitude,\n",
+    "#                  np.float(points[i0][i1])))   # the second is the latitude, so we index accordingly.\n",
     "        \n",
-    "        polygons.append(Polygon(built_points))\n",
+    "#         polygons.append(Polygon(built_points))\n",
     "\n",
-    "    trk = df[tract_col]\n",
-    "    blk = df[block_col]\n",
-    "    full_blk = df[full_block]\n",
-    "    return polygons, trk, blk\n",
+    "#     trk = df[tract_col]\n",
+    "#     blk = df[block_col]\n",
+    "#     full_blk = df[full_block]\n",
+    "#     return polygons, trk, blk\n",
     "\n",
-    "polygons, tract_col, block_col, full_block_col = \n",
-    "    create_polygons(blocks, 'the_geom', 'TRACTCE10','BLOCKCE10',\n",
-    "                    'CENSUS BLOCK FULL')"
+    "# polygons, tract_col, block_col, full_block_col = \n",
+    "#     create_polygons(blocks, 'the_geom', 'TRACTCE10','BLOCKCE10',\n",
+    "#                     'CENSUS BLOCK FULL')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "locations = crimes[['Latitude', 'Longitude']].apply(lambda x: \\\n",
-    "                                                    Point(x[0], x[1]), axis=1)"
+    "# locations = crimes[['Latitude', 'Longitude']].apply(lambda x: \\\n",
+    "#                                                     Point(x[0], x[1]), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-176-ec11f10d4018>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mfound\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpolygons\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mpolygons\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocations\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m             \u001b[0mmapping_indices\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mfound\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/shapely/geometry/base.py\u001b[0m in \u001b[0;36mcontains\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m    689\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcontains\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    690\u001b[0m         \u001b[0;34m\"\"\"Returns True if the geometry contains the other, else False\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 691\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mbool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimpl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'contains'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    692\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    693\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcrosses\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/shapely/predicates.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, this, other, *args)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mBinaryPredicate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDelegating\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstop_prepared\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mapping_indices = []\n",
-    "for i in range(len(locations)):\n",
-    "    found = False\n",
-    "    for j in range(len(polygons)):\n",
-    "        if polygons[j].contains(locations[i]):\n",
-    "            mapping_indices.append(j)\n",
-    "            found = True\n",
-    "            break\n",
-    "    if found == False:\n",
-    "        raise ValueError(f'Could not find polygon containing location at index: {i}')\n",
-    "print('Num points could not be placed in polygons:', could_not_find_polygon)"
+    "# mapping_indices = []\n",
+    "# for i in range(len(locations)):\n",
+    "#     found = False\n",
+    "#     for j in range(len(polygons)):\n",
+    "#         if polygons[j].contains(locations[i]):\n",
+    "#             mapping_indices.append(j)\n",
+    "#             found = True\n",
+    "#             break\n",
+    "#     if found == False:\n",
+    "#         raise ValueError(f'Could not find polygon containing location at index: {i}')\n",
+    "# print('Num points could not be placed in polygons:', could_not_find_polygon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def get_tract_id(idx):\n",
+    "#     return tract_col[idx]\n",
+    "\n",
+    "# def get_block_id(idx):\n",
+    "#     return block_col[idx]\n",
+    "\n",
+    "# def get_full_block_id(idx):\n",
+    "#     return full_block_col[idx]\n",
+    "\n",
+    "# crimes['tract_id'] = pd.Series(crimes.index.map(get_tract_id))\n",
+    "# crimes['block_id'] = pd.Series(crimes.index.map(get_block_id))\n",
+    "# crimes['full_block_id'] = pd.Series(crimes.index.map(get_block_id))"
    ]
   },
   {
@@ -745,52 +751,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_tract_id(idx):\n",
-    "    return tract_col[idx]\n",
-    "\n",
-    "# crimes['tract_id'] = \n",
-    "pd.Series(crimes.index.map(get_tract_id))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_block_id(idx):\n",
-    "    return block_col[idx]\n",
-    "\n",
-    "# crimes['block_id'] = \n",
-    "pd.Series(crimes.index.map(get_block_id))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_full_block_id(idx):\n",
-    "    return full_block_col[idx]\n",
-    "\n",
-    "# crimes['full_block_id'] = \n",
-    "pd.Series(crimes.index.map(get_block_id))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_population_by_tracts(filename):\n",
-    "    pop = pd.read_csv(filename, header=0)\n",
-    "    \n",
-    "    \n",
-    "get_population_by_tracts('Population_by_2010_Census_Block.csv')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -798,18 +759,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
   }
  },
  "nbformat": 4,
