Fit/Predict XGB regressor model

--- a/Chicago_predictions.ipynb
+++ b/Chicago_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -11,44 +11,22 @@
      "text": [
       "Collecting pip\n",
       "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5c/e0/be401c003291b56efc55aeba6a80ab790d3d4cece2778288d65323009420/pip-19.1.1-py2.py3-none-any.whl (1.4MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 1.4MB 23.0MB/s ta 0:00:01\n",
+      "\u001b[K     |████████████████████████████████| 1.4MB 5.1MB/s eta 0:00:01\n",
       "\u001b[?25hInstalling collected packages: pip\n",
-      "  Found existing installation: pip 10.0.1\n",
-      "    Uninstalling pip-10.0.1:\n",
-      "      Successfully uninstalled pip-10.0.1\n",
+      "  Found existing installation: pip 19.1\n",
+      "    Uninstalling pip-19.1:\n",
+      "      Successfully uninstalled pip-19.1\n",
       "Successfully installed pip-19.1.1\n",
-      "Collecting python-decouple\n",
-      "  Downloading https://files.pythonhosted.org/packages/9b/99/ddfbb6362af4ee239a012716b1371aa6d316ff1b9db705bfb182fbc4780f/python-decouple-3.1.tar.gz\n",
-      "Building wheels for collected packages: python-decouple\n",
-      "  Building wheel for python-decouple (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Stored in directory: /home/ec2-user/.cache/pip/wheels/0f/ee/80/75b684060dc6ecc5a28c07b75ef4063f378aff1a37556f342a\n",
-      "Successfully built python-decouple\n",
-      "Installing collected packages: python-decouple\n",
-      "Successfully installed python-decouple-3.1\n",
-      "Collecting geoalchemy2\n",
-      "  Downloading https://files.pythonhosted.org/packages/f9/39/f50f736246b223d8e22474131eb9e3c3f2eb76d409ed1ef7f8dcde60bdc8/GeoAlchemy2-0.6.2-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: SQLAlchemy>=0.8 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from geoalchemy2) (1.2.11)\n",
-      "Installing collected packages: geoalchemy2\n",
-      "Successfully installed geoalchemy2-0.6.2\n",
-      "Collecting shapely\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/38/b6/b53f19062afd49bb5abd049aeed36f13bf8d57ef8f3fa07a5203531a0252/Shapely-1.6.4.post2-cp36-cp36m-manylinux1_x86_64.whl (1.5MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.5MB 1.7MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: shapely\n",
-      "Successfully installed shapely-1.6.4.post2\n",
-      "Collecting imbalanced-learn\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e5/4c/7557e1c2e791bd43878f8c82065bddc5798252084f26ef44527c02262af1/imbalanced_learn-0.4.3-py3-none-any.whl (166kB)\n",
-      "\u001b[K     |████████████████████████████████| 174kB 1.7MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied, skipping upgrade: numpy>=1.8.2 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from imbalanced-learn) (1.15.4)\n",
-      "Requirement already satisfied, skipping upgrade: scipy>=0.13.3 in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (from imbalanced-learn) (1.1.0)\n",
-      "Collecting scikit-learn>=0.20 (from imbalanced-learn)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/5e/82/c0de5839d613b82bddd088599ac0bbfbbbcbd8ca470680658352d2c435bd/scikit_learn-0.20.3-cp36-cp36m-manylinux1_x86_64.whl (5.4MB)\n",
-      "\u001b[K     |████████████████████████████████| 5.4MB 4.1MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: scikit-learn, imbalanced-learn\n",
-      "  Found existing installation: scikit-learn 0.19.1\n",
-      "    Uninstalling scikit-learn-0.19.1:\n",
-      "      Successfully uninstalled scikit-learn-0.19.1\n",
-      "Successfully installed imbalanced-learn-0.4.3 scikit-learn-0.20.3\n",
-      "Requirement already satisfied: scipy in /home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages (1.1.0)\n"
+      "Requirement already satisfied: python-decouple in /anaconda3/lib/python3.7/site-packages (3.1)\n",
+      "Requirement already satisfied: geoalchemy2 in /anaconda3/lib/python3.7/site-packages (0.6.2)\n",
+      "Requirement already satisfied: SQLAlchemy>=0.8 in /anaconda3/lib/python3.7/site-packages (from geoalchemy2) (1.2.15)\n",
+      "Requirement already satisfied: shapely in /anaconda3/lib/python3.7/site-packages (1.6.4.post2)\n",
+      "Requirement already up-to-date: imbalanced-learn in /anaconda3/lib/python3.7/site-packages (0.4.3)\n",
+      "Requirement already satisfied, skipping upgrade: scipy>=0.13.3 in /anaconda3/lib/python3.7/site-packages (from imbalanced-learn) (1.2.1)\n",
+      "Requirement already satisfied, skipping upgrade: scikit-learn>=0.20 in /anaconda3/lib/python3.7/site-packages (from imbalanced-learn) (0.20.3)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.8.2 in /anaconda3/lib/python3.7/site-packages (from imbalanced-learn) (1.16.0)\n",
+      "Requirement already satisfied: scipy in /anaconda3/lib/python3.7/site-packages (1.2.1)\n",
+      "Requirement already satisfied: numpy>=1.8.2 in /anaconda3/lib/python3.7/site-packages (from scipy) (1.16.0)\n"
      ]
     }
    ],
@@ -63,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,64 +334,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Predictions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_output(y, y_pred, dataset_type):\n",
-    "\n",
-    "    fig = plt.figure(figsize=(10, 8))\n",
-    "    plt.plot(np.arange(len(y.flatten())),\n",
-    "                 y.flatten(), color='blue');\n",
-    "    plt.plot(np.arange(len(y_pred.flatten())),\n",
-    "                 y_pred.flatten(), color='red');\n",
-    "    plt.xlabel('Hour since beginning of data', fontsize=16)\n",
-    "    plt.ylabel('Risk', fontsize=18)\n",
-    "    plt.title(dataset_type + ' dataset', fontsize=18)\n",
-    "    plt.legend(labels=['risk', 'predicted risk'], prop={'size': 20})\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_training_validation_loss(epochs, history):\n",
-    "    plt.plot(range(1, epochs), history.history['loss'])\n",
-    "    plt.plot(range(1, epochs), history.history['val_loss'])\n",
-    "    plt.title('model train vs validation loss')\n",
-    "    plt.ylabel('loss')\n",
-    "    plt.xlabel('epoch')\n",
-    "    plt.legend(['train', 'validation'], loc='upper right')\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 2 µs, sys: 2 µs, total: 4 µs\n",
-      "Wall time: 7.15 µs\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
     "epochs = 5\n",
     "def map_risk_1(risk):\n",
     "    return np.power(risk * 1e5, 2)\n",
@@ -432,24 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
-      "  \"\"\")\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "(801, 24, 168) (801, 12, 168) (801, 24, 168) (801, 12, 168)\n",
-      "CPU times: user 2.1 s, sys: 304 ms, total: 2.41 s\n",
-      "Wall time: 46.9 s\n"
+      "CPU times: user 2.13 s, sys: 370 ms, total: 2.5 s\n",
+      "Wall time: 56.6 s\n"
      ]
     }
    ],
@@ -461,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +387,7 @@
        "((801, 24, 168), (801, 12, 168), (801, 24, 168), (801, 12, 168))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,6 +395,49 @@
    "source": [
     "X_train.shape, y_train.shape, X_test.shape, y_test.shape\n",
     "((801, 24, 168), (801, 12, 168), (801, 24, 168), (801, 12, 168))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_output(y, y_pred, dataset_type):\n",
+    "\n",
+    "    fig = plt.figure(figsize=(10, 8))\n",
+    "    plt.plot(np.arange(len(y.flatten())),\n",
+    "                 y.flatten(), color='blue');\n",
+    "    plt.plot(np.arange(len(y_pred.flatten())),\n",
+    "                 y_pred.flatten(), color='red');\n",
+    "    plt.xlabel('Hour since beginning of data', fontsize=16)\n",
+    "    plt.ylabel('Risk', fontsize=18)\n",
+    "    plt.title(dataset_type + ' dataset', fontsize=18)\n",
+    "    plt.legend(labels=['risk', 'predicted risk'], prop={'size': 20})\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LSTM Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_training_validation_loss(epochs, history):\n",
+    "    plt.plot(range(1, epochs), history.history['loss'])\n",
+    "    plt.plot(range(1, epochs), history.history['val_loss'])\n",
+    "    plt.title('model train vs validation loss')\n",
+    "    plt.ylabel('loss')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.legend(['train', 'validation'], loc='upper right')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -1038,6 +998,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RandomForest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XGB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xgb_wrangle(data):\n",
+    "    flat_data = data.flatten()\n",
+    "    X = pd.DataFrame(data={'hour': range(len(flat_data))},\n",
+    "                     index=range(len(flat_data)))\n",
+    "    y = pd.DataFrame(data={'risk': flat_data},\n",
+    "                     index=range(len(flat_data)))\n",
+    "    return X, y\n",
+    "\n",
+    "X_train_x, X_train_y = xgb_wrangle(X_train)\n",
+    "X_test_x, X_test_y   = xgb_wrangle(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x = pd.DataFrame(data={'x': [1, 2, 3, 4, 5]})\n",
+    "train_y = pd.DataFrame(data={'y': [3, 2, 3, 6, 9]})\n",
+    "test_x = pd.DataFrame(data={'x': [1, 2, 9, 4, 5]})\n",
+    "test_y = pd.DataFrame(data={'y': [7, 2, 3, 8, 9]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 45 candidates, totalling 135 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:   27.8s\n",
+      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:   57.6s\n",
+      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:  1.4min\n",
+      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:  2.1min\n",
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:  2.8min\n",
+      "[Parallel(n_jobs=-1)]: Done  45 tasks      | elapsed:  3.5min\n",
+      "[Parallel(n_jobs=-1)]: Done  56 tasks      | elapsed:  4.4min\n",
+      "[Parallel(n_jobs=-1)]: Done  69 tasks      | elapsed:  5.6min\n",
+      "[Parallel(n_jobs=-1)]: Done  82 tasks      | elapsed:  6.6min\n",
+      "[Parallel(n_jobs=-1)]: Done  97 tasks      | elapsed:  7.7min\n",
+      "[Parallel(n_jobs=-1)]: Done 112 tasks      | elapsed:  8.8min\n",
+      "[Parallel(n_jobs=-1)]: Done 135 out of 135 | elapsed: 10.3min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=3, error_score='raise-deprecating',\n",
+       "       estimator=XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bytree=1, gamma=0, importance_type='gain',\n",
+       "       learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
+       "       min_child_weight=1, missing=None, n_estimators=100, n_jobs=1,\n",
+       "       nthread=None, objective='reg:linear', random_state=0, reg_alpha=0,\n",
+       "       reg_lambda=1, scale_pos_weight=1, seed=None, silent=True,\n",
+       "       subsample=1),\n",
+       "       fit_params=None, iid='warn', n_jobs=-1,\n",
+       "       param_grid={'learning_rate': [0.01, 0.05, 0.1, 0.5, 0.7], 'n_estimators': [80, 100, 120], 'max_depth': [2, 3, 4]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score=True,\n",
+       "       scoring='neg_mean_squared_error', verbose=10)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "param_grid = {\n",
+    "    'learning_rate': [0.01, 0.05, 0.1, 0.5, 0.7],\n",
+    "    'n_estimators':  [80, 100, 120],\n",
+    "    'max_depth': [2, 3, 4],\n",
+    "#     'subsample': [0.8, 0.9],\n",
+    "#     'colsample_bytree': [0.3, 0.4],\n",
+    "#     'gamma': [4, 5]\n",
+    "}\n",
+    "\n",
+    "gridsearch = GridSearchCV(XGBRegressor(),\n",
+    "                          param_grid=param_grid, \n",
+    "                          scoring='neg_mean_squared_error', \n",
+    "                          cv=3, n_jobs=-1,\n",
+    "                          return_train_score=True, verbose=10)\n",
+    "\n",
+    "# gridsearch.fit(train_x, train_y)\n",
+    "gridsearch.fit(X_train_x, X_train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Best training score from grid search: 3.7085647804392596e-08\n",
+      "  Best testing score from grid search:  1.4710259873963914e-07\n",
+      "Best Grid Search model:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'learning_rate': 0.1, 'max_depth': 3, 'n_estimators': 120}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('  Best training score from grid search:', -gridsearch.score(X_train_x, X_train_y))\n",
+    "print('  Best testing score from grid search: ', -gridsearch.score(X_test_x, X_test_y))\n",
+    "print('Best Grid Search model:')\n",
+    "gridsearch.cv_results_['params'][gridsearch.best_index_]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 1.4710259873963914e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = gridsearch.predict(X_test_x)\n",
+    "print('MSE:', mean_squared_error(X_test_y, y_pred))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1047,9 +1198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1061,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
