Scale by block population

--- a/Chicago_predictions_combo.ipynb
+++ b/Chicago_predictions_combo.ipynb
@@ -275,24 +275,26 @@
     "do_gridsearch = True\n",
     "\n",
     "if use_counts == True:\n",
-    "    SEVERITY_SCALING_FACTOR = 1000000.\n",
-    "    SEVERITY_OPERATOR = '/'\n",
+    "    SEVERITY_SCALING_FACTOR = 1000.\n",
+    "    SEVERITY_OPERATOR = '*'\n",
     "else:\n",
     "    SEVERITY_SCALING_FACTOR = 1000.\n",
     "    SEVERITY_OPERATOR = '*'\n",
     "\n",
     "def scale_data(X):\n",
     "    if use_counts == True:\n",
-    "        X /= 1000000.0  # This we will use with the count(severity) SQL query\n",
+    "        X *= SEVERITY_SCALING_FACTOR  # This we will use with the count(severity) SQL query\n",
     "    else:\n",
-    "        X *= 1000.0   # This gave us good results earlier with the severity/avg(population) SQL query\n",
+    "        X *= SEVERITY_SCALING_FACTOR  # This gave us good results earlier with the \n",
+    "                                      # severity/avg(population) SQL query\n",
     "    return X\n",
     "\n",
     "def descale_data(X):\n",
     "    if use_counts == True:\n",
-    "        X *= 1000000.0  # This we will use with the count(severity) SQL query\n",
+    "        X /= SEVERITY_SCALING_FACTOR  # This we will use with the count(severity) SQL query\n",
     "    else:\n",
-    "        X /= 1000.0   # This gave us good results earlier with the severity/avg(population) SQL query\n",
+    "        X /= SEVERITY_SCALING_FACTOR  # This gave us good results earlier with the \n",
+    "                                      # severity/avg(population) SQL query\n",
     "    return X\n",
     "\n",
     "class GetData(object):\n",
@@ -307,7 +309,7 @@
     "                        incident.month,\n",
     "                        incident.dow,\n",
     "                        incident.hour,\n",
-    "                        COUNT(crimetype.severity) AS severity\n",
+    "                        COUNT(crimetype.severity)/AVG(block.population)*1000.0::DECIMAL AS severity\n",
     "                    FROM incident\n",
     "                    INNER JOIN block ON incident.blockid = block.id\n",
     "                    INNER JOIN crimetype ON incident.crimetypeid = crimetype.id\n",
@@ -3133,9 +3135,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3147,7 +3149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
