Tips pseudocode for user

--- a/Tips.ipynb
+++ b/Tips.ipynb
@@ -71,26 +71,16 @@
     "\n",
     "class GetData(object):\n",
     "    def go(self, SESSION, data_type, blockid, year):\n",
-    "        #         if data_type == BLOCK_VISITOR:        # \n",
-    "        #             SQL_QUERY = \\\n",
-    "        #                 f'''\n",
-    "        #                     SELECT\n",
-    "        #                         COUNT(*)/AVG(blocks.population) AS crime_rate\n",
-    "        #                     FROM incident\n",
-    "        #                     INNER JOIN blocks ON incident.blockid = blocks.id\n",
-    "        #                     INNER JOIN crimetype ON incident.crimetypeid = crimetype.id\n",
-    "        #                         AND blocks.population > 0\n",
-    "        #                         AND incident.cityid = 1\n",
-    "        #                         AND incident.year = {year}\n",
-    "        #                         AND blocks.id = {blockid}\n",
-    "        #                         AND incident.dow >= {dow_start}\n",
-    "        #                         AND incident.dow <= {dow_end}\n",
-    "        #                         AND incident.hour >= {hour_start}\n",
-    "        #                         AND incident.hour <= {hour_end}\n",
-    "        #                 '''\n",
-    "            \n",
-    "            \n",
-    "        if data_type == BLOCK:\n",
+    "        if data_type == BLOCK_VISITOR_PREDICTIONS:\n",
+    "            SQL_QUERY = \\\n",
+    "                f'''\n",
+    "                    SELECT\n",
+    "                        blocks.prediction AS predictions\n",
+    "                    FROM blocks\n",
+    "                        AND blocks.cityid = 1\n",
+    "                        AND blocks.id = {blockid}\n",
+    "                '''\n",
+    "        elif data_type == BLOCK:\n",
     "            SQL_QUERY = \\\n",
     "                f'''\n",
     "                    SELECT\n",
@@ -234,27 +224,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def tips_for_visitor():\n",
-    "#     with session_scope() as session:\n",
-    "#         data_block_current = GetData().go(session, BLOCK, blockid, current_year)[0]\n",
-    "#         data_block_5_years_ago = GetData().go(session, BLOCK_5_YEARS_AGO, blockid, current_year)[0]\n",
-    "#         data_block_predictions = GetData().go(session, BLOCK_PREDICTIONS, blockid, None)[0]\n",
-    "#         data_city_current = GetData().go(session, CITY, None, current_year)[0]\n",
-    "#         data_city_predictions = GetData().go(session, CITY_PREDICTIONS, None, None)[0]\n",
+    "def tips_for_visitor():\n",
+    "    with session_scope() as session:\n",
+    "        data_block_current = GetData().go(session, BLOCK, blockid, current_year)[0]\n",
+    "        data_block_5_years_ago = GetData().go(session, BLOCK_5_YEARS_AGO, blockid, current_year)[0]\n",
+    "        data_block_predictions = GetData().go(session, BLOCK_PREDICTIONS, blockid, None)[0]\n",
+    "        data_city_current = GetData().go(session, CITY, None, current_year)[0]\n",
+    "        data_city_predictions = GetData().go(session, CITY_PREDICTIONS, None, None)[0]\n",
     "    \n",
-    "#     #  1. Crime rate in this area has decreased X% over last 5 years\n",
-    "#     perc_change_block = perc_calc_block(None, data_block_5_years_ago, data_block_current)\n",
-    "#     block_str = \"Crime rate in this area has \" + \"increased\" + if perc_change_block > 0.0 else \"decreased\" + \\\n",
-    "#                 str(np.absolute(perc_change_block)) + \"% over last 5 years\"\n",
+    "    #  1. Projected crime rate in this area is higher during \n",
+    "    #     [(start_hour, end_hour), (start_hour, end_hour), ...]\n",
+    "    #  select_top_two(average(24-hour crime rates)), and average(all hours)\n",
+    "    #\n",
+    "    #  Output:  Crime rate for [this hour] range is higher than average crime rates\n",
+    "    #           Crime rate for [this hour] range is higher than average crime rates\n",
+    "    def f1(blockid, start_date, end_date):\n",
+    "        data_block_visitor_predictions = GetData().go(session, BLOCK_PREDICTIONS, blockid, None)[0]\n",
+    "        pred = extract_prediction_values(data_block_visitor_predictions, \n",
+    "                                         start_date, end_date) # [NUM_BLOCKID, month, dow*hour, ppo, violence] = value\n",
+    "        start_dow, end_dow = day_of_week(start_date), day_of_week(end_date)\n",
     "        \n",
-    "#     #  2. Projected crime rate in this area is X% compared to city average\n",
-    "#     perc_change_block_vs_city = perc_calc_block(None, data_block_predictions, data_city_predictions)\n",
-    "#     block_vs_city_str = \"Projected crime rate in this area is \" + \"higher by\" + \\\n",
-    "#                             if perc_change_block > 0.0 else \"lower by\" + \n",
-    "#                             str(np.absolute(perc_change_block_vs_city)) + \\\n",
-    "#                             \"% compared to city average\"\n",
+    "        # Average for each hour across the selected dates.\n",
+    "        # Rank the hours according to the highest crime rate.\n",
+    "        # Select the top two hours from this list.\n",
+    "        # Report to user\n",
+    "        #     block_str = \"Projected crime rate in this area is generally higher during \" + \n",
+    "        #                 str(high_crime_hour1) + str(high_crime_hour2)\n",
+    "\n",
+    "    #  2. Projected crime rate in this area is X% compared to city average\n",
+    "    def day_of_month(x):\n",
+    "        return x.day - 1  # for 0-based index\n",
     "    \n",
-    "#     return [block_str, block_vs_city_str]"
+    "    def month(x):\n",
+    "        return x.month - 1 # for 0-based index\n",
+    "\n",
+    "    def day_of_week(dt):\n",
+    "        return dt.weekday()\n",
+    "\n",
+    "    def extact_prediction_values(start_date, end_date):\n",
+    "        start_day, end_day = day_of_month(start_date), day_of_month(end_date)\n",
+    "        start_month, end_month = month(start_date), month(end_date)\n",
+    "        start_dow, end_dow = day_of_week(start_date), day_of_week(end_date)\n",
+    "        \n",
+    "        # Perform Michael magic here to get the predictions into an array\n",
+    "        return array\n",
+    "        \n",
+    "    def f2(blockid, start_date, end_date):\n",
+    "        data_block_visitor_predictions = GetData().go(session, BLOCK_PREDICTIONS, blockid, None)[0]\n",
+    "        pred = extract_prediction_values(data_block_visitor_predictions,\n",
+    "                                         start_date, end_date) # [NUM_BLOCKID, month, dow*hour, ppo, violence] = value\n",
+    "        start_dow, end_dow = day_of_week(start_date), day_of_week(end_date)\n",
+    "\n",
+    "        # Get the average for all days selected for the selected block\n",
+    "        # Get the average for all days selected for the city\n",
+    "        # Compare the averages to get the % change and report to the user\n",
+    "    \n",
+    "        #         perc_change_block_vs_city = perc_calc_block(None, data_block_predictions, data_city_predictions)\n",
+    "        #         block_vs_city_str = \"Projected crime rate in this area on your selected dates is \" + \"higher by\" \\\n",
+    "        #                                 if perc_change_block > 0.0 else \"lower by\" + \n",
+    "        #                                 str(np.absolute(perc_change_block_vs_city)) + \\\n",
+    "        #                                 \"% compared to city average\"\n",
+    "    \n",
+    "    return [block_str, block_vs_city_str]"
    ]
   }
  ],
