Updated combining of day-of-week and hour-of-day predictions

--- a/Chicago_predictions_combo_crime_types.ipynb
+++ b/Chicago_predictions_combo_crime_types.ipynb
@@ -1250,8 +1250,8 @@
     "NUM_DAYS_IN_WEEK   = 7\n",
     "NUM_HOURS_IN_DAY   = 24\n",
     "\n",
-    "crime_rate = np.zeros((NUM_BLOCKIDS, NUM_MONTHS_IN_YEAR, NUM_DAYS_IN_WEEK * NUM_HOURS_IN_DAY))\n",
-    "y_test_dow_times_hour = np.zeros((NUM_BLOCKIDS, NUM_MONTHS_IN_YEAR, NUM_DAYS_IN_WEEK * NUM_HOURS_IN_DAY))\n",
+    "crime_rate = np.zeros((NUM_BLOCKIDS, NUM_MONTHS_IN_YEAR, NUM_DAYS_IN_WEEK, NUM_HOURS_IN_DAY, 3, 2))\n",
+    "y_test_dow_times_hour = np.zeros((NUM_BLOCKIDS, NUM_MONTHS_IN_YEAR, NUM_DAYS_IN_WEEK, NUM_HOURS_IN_DAY, 3, 2))\n",
     "\n",
     "# Each of the relative percent difference arrays can contain NaN's.\n",
     "# This is because if both y_pred and y_true were zeros, their\n",
@@ -1261,17 +1261,8 @@
     "# have the same y_pred and y_true, we will give the largest value\n",
     "# from our array to these NaNs.\n",
     "\n",
-    "def replace_nans(a):\n",
-    "    b = a.copy()\n",
-    "    for row in range(a.shape[0]):\n",
-    "        # max_of_row = np.max(row)\n",
-    "        for col in range(a.shape[1]):\n",
-    "            if np.isnan(a[row][col]):\n",
-    "                b[row][col] = 1.0\n",
-    "    return b\n",
-    "\n",
-    "rpd_dow = replace_nans(rpd_dow)\n",
-    "rpd_hod = replace_nans(rpd_hod)\n",
+    "rpd_dow = np.nan_to_num(rpd_dow)\n",
+    "rpd_hod = np.nan_to_num(rpd_hod)\n",
     "\n",
     "print('Number of nans after replacement:', np.isnan(rpd_dow).sum())\n",
     "\n",
@@ -1286,29 +1277,41 @@
     "\n",
     "end_year = X_test_end_year\n",
     "\n",
-    "for blockid in range(NUM_BLOCKIDS):\n",
-    "    for month in range(1, NUM_MONTHS_IN_YEAR + 1):\n",
+    "# for blockid in range(NUM_BLOCKIDS):\n",
+    "#     count = np.zeros((NUM_MONTHS_IN_YEAR, NUM_DAYS_IN_WEEK, NUM_HOURS_IN_DAY, 3, 2))\n",
+    "    \n",
+    "#     for month in range(1, NUM_MONTHS_IN_YEAR + 1):\n",
     "        \n",
-    "        count = np.zeros(NUM_DAYS_IN_WEEK * NUM_HOURS_IN_DAY)\n",
-    "        for day in range(1, days_in_month(end_year, month) + 1):\n",
-    "            for hour in range(24):\n",
-    "                dow  = day_of_week(datetime(end_year, month, day))\n",
+    "#         for day in range(1, days_in_month(end_year, month) + 1):\n",
+    "#             for hour in range(24):\n",
+    "#                 dow  = day_of_week(datetime(end_year, month, day))\n",
     "\n",
-    "                weight_dow = rpd_dow[blockid, (month - 1)*dow]\n",
-    "                weight_hod = rpd_hod[blockid, (month - 1)*hour]\n",
-    "                weight_sum = weight_dow + weight_hod\n",
+    "#                 weight_dow = rpd_dow[blockid, (month - 1)*dow]\n",
+    "#                 weight_hod = rpd_hod[blockid, (month - 1)*hour]\n",
+    "#                 weight_sum = weight_dow + weight_hod\n",
     "                \n",
-    "                crime_rate[blockid, month-1, dow * hour] += \\\n",
-    "                    (y_pred_dow[blockid, (month - 1)*dow] * weight_dow +\n",
-    "                     y_pred_hod[blockid, (month - 1)*hour] * weight_hod) / weight_sum\n",
+    "#                 crime_rate[blockid, month-1, dow * hour] += \\\n",
+    "#                     (y_pred_dow[blockid, (month - 1)*dow] * weight_dow +\n",
+    "#                      y_pred_hod[blockid, (month - 1)*hour] * weight_hod) / weight_sum\n",
     "                \n",
-    "                y_test_dow_times_hour[blockid, month-1, dow*hour] += \\\n",
-    "                    (y_test_dow[blockid, (month - 1)*dow] * weight_dow +\n",
-    "                     y_test_hod[blockid, (month - 1)*hour] * weight_hod) / weight_sum\n",
+    "#                 y_test_dow_times_hour[blockid, month-1, dow*hour] += \\\n",
+    "#                     (y_test_dow[blockid, (month - 1)*dow] * weight_dow +\n",
+    "#                      y_test_hod[blockid, (month - 1)*hour] * weight_hod) / weight_sum\n",
     "                \n",
-    "                count[dow * hour] += 1\n",
-    "        crime_rate[blockid, month-1, dow * hour] /= count[dow * hour]\n",
-    "        y_test_dow_times_hour[blockid, month-1, dow * hour] /= count[dow * hour]\n",
+    "#                 count[dow * hour] += 1\n",
+    "#         crime_rate[blockid, month-1, dow * hour] /= count[dow * hour]\n",
+    "#         y_test_dow_times_hour[blockid, month-1, dow * hour] /= count[dow * hour]\n",
+    "\n",
+    "\n",
+    "for i in range(NUM_DAYS_IN_WEEK):\n",
+    "    for j in range(NUM_HOURS_IN_DAY):\n",
+    "        crime_rate[:, :, i, j, :, :] = \\\n",
+    "            (y_pred_dow[:, :, i, :, :] * rpd_dow[:, :, i, :, :] + y_pred_hod[:, :, j, :, :] * rpd_hod[:, :, j, :, :]) / \\\n",
+    "            (rpd_dow[:, :, i, :, :] + rpd_hod[:, :, j, :, :])\n",
+    "        y_test_dow_times_hour[:, :, i, j, :, :] = \\\n",
+    "            (y_test_dow[:, :, i, :, :] * rpd_dow[:, :, i, :, :] + y_test_hod[:, :, j, :, :] * rpd_hod[:, :, j, :, :]) / \\\n",
+    "            (rpd_dow[:, :, i, :, :] + rpd_hod[:, :, j, :, :])\n",
+    "\n",
     "\n",
     "crime_rate_descaled = descale_data(crime_rate)\n",
     "crime_rate_descaled = np.nan_to_num(crime_rate_descaled)\n",
@@ -2367,9 +2370,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_tensorflow_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2381,7 +2384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
